[workspace]
members  = ["contracts/*", "packages/*", "tests/*"]
resolver = "2"

[workspace.package]
rust-version = "1.68.2"
edition      = "2021"
homepage     = "https://stargaze.zone"
repository   = "https://github.com/public-awesome/marketplace"
license      = "BUSL-1.1"

[workspace.dependencies]
sg-marketplace-common = { path = "packages/sg-marketplace-common" }
sg-marketplace = { path = "contracts/marketplace", features = ["library"] }
stargaze-fair-burn = { git = "https://github.com/public-awesome/core.git", branch = "fair-burn-contract-docs", features = [
    "library",
] }
sg721-base = { version = "=2.3.0", features = ["library"] }
sg721 = { version = "=2.3.0", features = ["library"] }
vending-factory = { version = "=2.3.0", features = ["library"] }
vending-minter = { version = "=2.3.0", features = ["library"] }
base-minter = { version = "=2.3.0", features = ["library"] }
sg1 = "=2.3.0"
sg2 = "=2.3.0"
sg4 = "=2.3.0"
sg-controllers = "=2.3.0"
sg-std = "=2.3.0"
cosmwasm-schema = "1.2.1"
cosmwasm-std = "1.2.1"
cosmwasm-storage = "1.2.1"
cw-storage-macro = "0.16.0"
cw-storage-plus = "0.16.0"
cw-controllers = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cw721 = "0.16.0"
cw721-base = { version = "0.16.0", features = ["library"] }
cw-utils = "0.16.0"
schemars = "0.8.11"
semver = "1.0.16"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
anyhow = "1.0.41"
regex = "1.8.3"

# dev-dependencies
cw-multi-test  = "0.16.0"
sg-multi-test  = "=2.3.0"
test-suite     = "=2.3.0"
mockall        = "0.11.4"
cute           = "0.3.0"
cosm-orc       = "3.0.1"
cosm-tome      = "0.1.1"
assert_matches = "1.5"
serde_json     = "1.0"
env_logger     = "0.9.0"
test-context   = "0.1.4"
once_cell      = "1.13.0"
rand           = "0.8"
itertools      = "0.10.5"

[profile.release.package.sg-marketplace]
codegen-units = 1
incremental   = false

[profile.release.package.sg-reserve-auction]
codegen-units = 1
incremental   = false

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
