[workspace]
members  = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
rust-version = "1.74.0"
edition      = "2021"
homepage     = "https://stargaze.zone"
repository   = "https://github.com/public-awesome/marketplace"
license      = "BUSL-1.1"

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
codegen-units    = 1
incremental      = false
