[package]
name = "sg-marketplace"
version = "1.5.0"
authors = [
  "Shane Vitarana <s@noreply.publicawesome.com>",
  "Jake Hartnell <jake@publicawesome.com>",
  "Jorge Hernandez <jorge@publicawesome.com>",
]
description = "Stargaze Marketplace Smart Contract"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.13
"""

[dependencies]
cosmwasm-schema       = { workspace = true }
cosmwasm-std          = { workspace = true }
cw-storage-plus       = { workspace = true }
cw-storage-macro      = { workspace = true }
cw721                 = { workspace = true }
cw721-base            = { workspace = true }
cw-utils              = { workspace = true }
cw2                   = { workspace = true }
stargaze-fair-burn    = { workspace = true }
sg721-base            = { workspace = true }
sg721                 = { workspace = true }
sg-std                = { workspace = true }
sg1                   = { workspace = true }
sg2                   = { workspace = true }
sg-controllers        = { workspace = true }
sg-marketplace-common = { workspace = true }
serde                 = { workspace = true }
semver                = { workspace = true }
thiserror             = { workspace = true }

[dev-dependencies]
cw-multi-test   = { workspace = true }
sg-multi-test   = { workspace = true }
vending-factory = { workspace = true }
vending-minter  = { workspace = true }
base-minter     = { workspace = true }
test-suite      = { workspace = true }
cute            = { workspace = true }
anyhow          = { workspace = true }

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
