[package]
name = "sg-marketplace"
version = "1.3.0"
authors = [
  "Shane Vitarana <s@noreply.publicawesome.com>",
  "Jake Hartnell <jake@publicawesome.com>",
  "Jorge Hernandez <jorge@publicawesome.com>",
]
edition = "2018"
repository = "https://github.com/public-awesome/marketplace"
description = "Stargaze Marketplace Smart Contract"
license = "BUSL-1.1"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
doc  = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.13
"""

[dependencies]
cosmwasm-schema  = "1.2.1"
cosmwasm-std     = "1.2.1"
cosmwasm-storage = "1.2.1"
cw-storage-plus  = "0.16.0"
cw2              = "0.16.0"
cw20             = "0.16.0"
cw721            = "0.16.0"
cw721-base       = { version = "0.16.0", features = ["library"] }
schemars         = "0.8.11"
serde            = { version = "1.0.145", default-features = false, features = ["derive"] }
sg721-base       = { version = "2.1.0", features = ["library"] }
sg721            = { version = "2.1.0", features = ["library"] }
thiserror        = "1.0.31"
sg-std           = "2.1.0"
cw-utils         = "0.16.0"
sg1              = "2.1.0"
sg2              = "2.1.0"
sg-controllers   = "2.1.0"
semver           = "1"

[dev-dependencies]
cute            = "0.3.0"
vending-factory = "2.1.0"
vending-minter  = "2.1.0"
cw-multi-test   = "0.16.0"
sg-multi-test   = "2.1.0"
base-minter     = "2.1.0"
test-suite      = "2.1.0"

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
