[package]
name = "stargaze-reserve-auction"
version = "1.0.2"
authors = [
  "Shane Vitarana <s+git@publicawesome.com>",
  "Tasio Victoria <tasiovictoria@ujulabs.com>",
]
description = "Stargaze Reserve Auction Contract"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
doc  = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
sg-marketplace-common = { version = "= 1.1.0" }
stargaze-royalty-registry = { version = "0.3.0", features = ["library"] }
stargaze-fair-burn    = { version = "1.0.2", features = ["library"] }
cosmwasm-std          = "1.5.4"
cosmwasm-schema       = "1.5.3"
cw-storage-macro      = "0.16.0"
cw-storage-plus       = "0.16.0"
cw-utils              = "0.16.0"
cw2                   = "0.16.0"
cw721                 = "0.16.0"
schemars              = "0.8.11"
serde                 = { version = "1.0.145", default-features = false, features = ["derive"] }
sg-std                = { version = "2.1.0", features = ["library"] }
sg721                 = "2.4.0"
sg721-base            = { version = "2.1.0", features = ["library"] }
thiserror             = "1.0.31"

[dev-dependencies]
cw-multi-test  = "0.16.0"
sg-multi-test  = "2.1.0"
sg2            = "2.1.0"
sg721          = { version = "2.1.0", features = ["library"] }
vending-minter = { version = "2.1.0", features = ["library"] }
anyhow         = "1.0.41"
test-suite     = "2.1.0"
regex          = "1.8.3"
