[package]
name       = "e2e-tests"
version    = "0.1.0"
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
stargaze-fair-burn = { workspace = true }
base-factory-old   = { package = "base-factory", git = "https://github.com/public-awesome/launchpad", tag = "v3.0.0-beta.1" }
base-minter-old    = { package = "base-minter", git = "https://github.com/public-awesome/launchpad", tag = "v3.0.0-beta.1" }
sg721-base-old     = { package = "sg721-base", git = "https://github.com/public-awesome/launchpad", tag = "v3.0.0-beta.1" }
base-factory-new   = { package = "base-factory", git = "https://github.com/public-awesome/launchpad", branch = "yubrew/sg-995-change-update-to-optional" }
base-minter-new    = { package = "base-minter", git = "https://github.com/public-awesome/launchpad", branch = "yubrew/sg-995-change-update-to-optional" }
sg721-base-new     = { package = "sg721-base", git = "https://github.com/public-awesome/launchpad", branch = "yubrew/sg-995-change-update-to-optional" }
sg-marketplace     = { package = "sg-marketplace", git = "https://github.com/public-awesome/marketplace", tag = "v1.4.0" }
sg2                = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-utils           = { workspace = true }
cosm-orc           = { workspace = true }
cosm-tome          = { workspace = true }
assert_matches     = { workspace = true }
serde_json         = { workspace = true }
env_logger         = { workspace = true }
test-context       = { workspace = true }
once_cell          = { workspace = true }
serde              = { workspace = true }
rand               = { workspace = true }
itertools          = { workspace = true }
sg-std             = { workspace = true }
cosmwasm-schema    = { workspace = true }
sg721              = { workspace = true }
